[project]
name = "oreilly-2026-03march-objects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitautopush>=0.4.1",
    "ipyparallel>=9.1.0",
    "jupyter-core>=5.9.1",
    "notebook>=7.5.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]
